Correcteur épaisseur collapse

--- a/src/components/Collapse/index.scss
+++ b/src/components/Collapse/index.scss
@@ -28,6 +28,7 @@
     justify-content: space-between;
     padding: 10px 20px 10px 10px;
     border-radius: 10px;
+    height: 52px;
     @media (max-width: 425px) {
       height: 30px;
       border-radius: 5px;
